[package]
name = "polygenv2"
version = "0.1.0"
edition = "2021"

[dependencies]
blas = "0.22.0"
itertools = "0.14.0"
lazy_static = "1.5.0"
ndarray = { version = "0.16.1", features = ["blas"] }
ndarray-linalg = "0.17.0"
num-traits = "0.2.19"
openblas-src = "0.10.11"
phf = { version = "0.11.3", features = ["macros"] }
